week 4 3 tasks done

--- a/RobbyTheRobot/RobbyTheRobot.vcxproj
+++ b/RobbyTheRobot/RobbyTheRobot.vcxproj
@@ -133,6 +133,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Source.cpp" />
+    <ClCompile Include="Tut4_2.cpp" />
+    <ClCompile Include="Tut4_3.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
